--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -181,7 +181,7 @@ SupportScreen As screen:
                 FontWeight: =FontWeight.Semibold
                 Height: =100
                 Text: |-
-                    =" Leads and incetives related contact :  "
+                    =" Leads and incentives related contact :  "
                 VerticalAlign: =VerticalAlign.Top
                 Width: =Parent.Width-20
                 X: =10
@@ -212,7 +212,7 @@ SupportScreen As screen:
                 FontWeight: =FontWeight.Semibold
                 Height: =Parent.Height-btnContactSS.Height-lblContactySS.Height-btnSupportSS.Height-50
                 Text: |-
-                    ="Email support : "& Char(10) & "Between 9 AM to 1 PM" & Char(10) &"on Monday to Friday  "
+                    ="Email support : "& Char(10) & "between 9 AM to 1 PM" & Char(10) &"on Monday to Friday  "
                 VerticalAlign: =VerticalAlign.Top
                 Width: =Parent.Width-20
                 X: =10
