--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -302,7 +302,7 @@ FAQScreen As screen:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
-            Width: =Parent.Width/4
+            Width: =Parent.Width
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
