--- a/QuantumTechnicianApp/Src/UserValidateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UserValidateScreen.fx.yaml
@@ -64,7 +64,7 @@ UserValidateScreen As screen:
                 Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
                 Text: |-
                     =
-                        "You don't have authorization to use this app.Kindly ask to support team."
+                        "You are not authorized to use this App. Kindly contact support team."
                 Width: =Parent.Width
                 ZIndex: =2
 
