--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -179,7 +179,6 @@ SupportScreen As screen:
                 Fill: =RGBA(237, 237, 237, 1)
                 FocusedBorderThickness: =5
                 Font: =Font.Arial
-                FontWeight: =FontWeight.Semibold
                 Height: =80
                 Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
                 Text: |-
@@ -213,7 +212,6 @@ SupportScreen As screen:
                 Fill: =RGBA(237, 237, 237, 1)
                 FocusedBorderThickness: =5
                 Font: =Font.Arial
-                FontWeight: =FontWeight.Semibold
                 Height: =Parent.Height-btnContactSS.Height-lblContactySS.Height-btnSupportSS.Height-50
                 Size: =If(Parent.Width>800,20,Parent.Width<358,12,Parent.Width>358,14)
                 Text: |-
@@ -264,7 +262,7 @@ SupportScreen As screen:
 
                 lblMenuCS_3 As label:
                     AutoHeight: =true
-                    Color: =RGBA(255, 0, 0, 1)
+                    Color: =RGBA(169, 169, 169, 1)//RGBA(255, 0, 0, 1)
                     Height: =24
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -278,7 +276,7 @@ SupportScreen As screen:
                     ZIndex: =1
 
                 iconMenuCS_3 As icon.Add:
-                    Color: =RGBA(255, 0, 0, 1)
+                    Color: =RGBA(169, 169, 169, 1)//RGBA(255, 0, 0, 1)
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
