--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -8,11 +8,11 @@ FAQScreen As screen:
             },
             {
                 Question: "Can I communicate the leads using old process ?",
-                Answer: "NO.The incentives of the leads entered using the App will ONLY be shown in the App."
+                Answer: "NO. The incentives of the leads entered using the App will ONLY be shown in the App."
             },
              {
                 Question: "Whom should I contact in case I have query regarding incentive calculation ?",
-                Answer: "See support page" 
+                Answer: "See support page." 
             },
              {
                 Question: "When incentives will be reflected in the App ?",
@@ -20,15 +20,15 @@ FAQScreen As screen:
             },
              {
                 Question: "Can I enter the leads in case I do not have contract number of the client ?",
-                Answer: "NO.You must have contract number of the client for entering the lead. "
+                Answer: "NO. You must have contract number of the client for entering the lead. "
             },
              {
                 Question: "Are photos are mandatory while entering the lead ?",
-                Answer: "No they are not mandatory. You can attach upto four photos per lead."
+                Answer: "No. They are not mandatory. You can attach upto four photos per lead."
             },
              {
                 Question: "Can I edit lead information after submitting the lead ?",
-                Answer: "NO.You can not change the lead information once lead is submitted. "
+                Answer: "NO. You can not change the lead information once lead is submitted. "
             },
              {
                 Question: "How will I get updates regarding my incetives ?",
@@ -36,11 +36,11 @@ FAQScreen As screen:
             },
              {
                 Question: "Will the App work on Apple and Android phones ?",
-                Answer: "Yes.It will work on both iPhone and Android phones. You need to first install Microsoft PowerApp from Apples iStore and Googles PlayStore. "
+                Answer: "Yes. It will work on both iPhone and Android phones. You need to first install Microsoft PowerApp from Apples iStore and Googles PlayStore. "
             },
              {
                 Question: "Do I need internet connection every time to use the App ?",
-                Answer: "Yes.Internet connectivity is required for the App."
+                Answer: "Yes. Internet connectivity is required for the App."
             }
         );
         UpdateContext({VarAnswerFAQ: false});
