--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -731,7 +731,7 @@ UnitScreen As screen:
                     ZIndex: =1
 
                 iconMenuUS As icon.Add:
-                    Color: =RGBA(169, 169, 169, 1)
+                    Color: =AllScreensCSS.RColorBlack
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
