--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1464,7 +1464,7 @@ EstimateScreen As screen:
 
                 lblMenuES As label:
                     AutoHeight: =true
-                    Color: =RGBA(169, 169, 169, 1)
+                    Color: =AllScreensCSS.RColorBlack
                     Height: =24
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -1478,7 +1478,7 @@ EstimateScreen As screen:
                     ZIndex: =1
 
                 iconMenuES As icon.Add:
-                    Color: =RGBA(169, 169, 169, 1)
+                    Color: =AllScreensCSS.RColorBlack
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
