--- a/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/SupportScreen.fx.yaml
@@ -262,7 +262,7 @@ SupportScreen As screen:
 
                 lblMenuCS_3 As label:
                     AutoHeight: =true
-                    Color: =RGBA(169, 169, 169, 1)//RGBA(255, 0, 0, 1)
+                    Color: =AllScreensCSS.RColorBlack
                     Height: =24
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -276,7 +276,7 @@ SupportScreen As screen:
                     ZIndex: =1
 
                 iconMenuCS_3 As icon.Add:
-                    Color: =RGBA(169, 169, 169, 1)//RGBA(255, 0, 0, 1)
+                    Color: =AllScreensCSS.RColorBlack
                     Height: =Parent.Height/4.5
                     Icon: =ThisItem.icon
                     Width: =Parent.Width/4.5
