--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -254,11 +254,12 @@ FAQScreen As screen:
                 Button5 As button:
                     BorderThickness: =0
                     Fill: =RGBA(255, 0, 0, 1)
-                    FontWeight: =FontWeight.Bold
+                    FontWeight: =FontWeight.Normal
                     Height: =31
                     HoverFill: =Self.Fill
                     OnSelect: |-
                         =UpdateContext({VarAnswerFAQ:true});
+                    PressedFill: =Self.Fill
                     Text: ="+"
                     Visible: =!(ThisItem.IsSelected && VarAnswerFAQ )
                     Width: =29
@@ -269,11 +270,12 @@ FAQScreen As screen:
                 Button5_1 As button:
                     BorderThickness: =0
                     Fill: =RGBA(255, 0, 0, 1)
-                    FontWeight: =FontWeight.Bold
+                    FontWeight: =FontWeight.Normal
                     Height: =31
                     HoverFill: =Self.Fill
                     OnSelect: |-
                         =UpdateContext({VarAnswerFAQ:false});
+                    PressedFill: =Self.Fill
                     Text: ="-"
                     Visible: =(ThisItem.IsSelected && VarAnswerFAQ)
                     Width: =29
@@ -371,7 +373,7 @@ FAQScreen As screen:
                     BorderThickness: =5
                     Fill: =RGBA(255, 0, 0, 1)
                     Height: =Parent.Height
-                    Visible: =If(ThisItem.Navigate=DashboardScreen,true,false)
+                    Visible: =If(ThisItem.Navigate=FAQScreen,true,false)
                     Width: =4
                     X: =1
                     ZIndex: =5
