--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -892,6 +892,7 @@ LeadScreen As screen:
 
                         lblzipcodevalueLdS As label:
                             Text: =glryleadlistLS.Selected.'ZipCode '
+                            Width: =200
                             ZIndex: =2
 
                         Label1 As label:
