--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -112,12 +112,12 @@ App As appinfo:
                 Navigate: DashboardScreen
             },
             {
-                Title: "About",
+                Title: "About App ",
                 icon: Icon.Information,
                 Navigate: AboutScreen
             },
             {
-                Title: "Support",
+                Title: "Support Contact",
                 icon: Icon.Support,
                 Navigate: SupportScreen
             },
