--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -117,7 +117,7 @@ App As appinfo:
                 Navigate: AboutScreen
             },
             {
-                Title: "Support Contact",
+                Title: "Support" &  Char(10) & "Contact",
                 icon: Icon.Support,
                 Navigate: SupportScreen
             },
