--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -147,6 +147,7 @@
     "UserValidateScreen",
     "AboutScreen",
     "SupportScreen",
-    "FAQScreen"
+    "FAQScreen",
+    "FAQScreen_1"
   ]
 }
