--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -3,44 +3,40 @@ FAQScreen As screen:
         =ClearCollect(
             FAQ,
             {
-                Question: "Why my old incentives are not shown in the App ?",
-                Answer: "The incentives for the leads entered in the App after 01 Jan 2024 are shown in the App. "
+                Question: "Why my old incentives are not shown in the App?",
+                Answer: "The incentives for the leads submitted as of 01/01/24 are shown in the App. "
             },
             {
                 Question: "Can I communicate the leads using old process ?",
                 Answer: "NO. The incentives of the leads entered using the App will ONLY be shown in the App."
             },
              {
-                Question: "Whom should I contact in case I have query regarding incentive calculation ?",
-                Answer: "See support page." 
+                Question: "Whom should I contact in case I have query regarding incentive calculation?",
+                Answer: "Please see Support page." 
             },
              {
-                Question: "When incentives will be reflected in the App ?",
-                Answer: "The process of updating incentives is executed every night. You will see incentives of the lead after 24 hours. "
+                Question: "When will incentives be reflected in the App?",
+                Answer: "The process of updating incentives is executed daily. You will see prospective Incentive calculated the following day. "
             },
              {
-                Question: "Can I enter the leads in case I do not have contract number of the client ?",
-                Answer: "NO. You must have contract number of the client for entering the lead. "
+                Question: "Can I enter the leads in case I do not have contract number of the client?",
+                Answer: "No. You MUST input the SEC contract number in order to create a lead. "
             },
              {
-                Question: "Are photos are mandatory while entering the lead ?",
+                Question: "Are photos required to enter a lead?",
                 Answer: "No. They are not mandatory. You can attach upto four photos per lead."
             },
              {
-                Question: "Can I edit lead information after submitting the lead ?",
-                Answer: "NO. You can not change the lead information once lead is submitted. "
+                Question: "Can I edit lead information after submitting?",
+                Answer: "No, you cannot change the lead information once it is submitted "
             },
              {
-                Question: "How will I get updates regarding my incetives ?",
-                Answer: "You will get notification in the App in case status of your lead is changed from Open to Quoted or from Quoted to Sold."
+                Question: "How will I get updates regarding my incentives?",
+                Answer: "You will receive a notification in the App when lead status changes (e.g., from Open to Quoted, or from Quoted to Sold)."
             },
              {
-                Question: "Will the App work on Apple and Android phones ?",
-                Answer: "Yes. It will work on both iPhone and Android phones. You need to first install Microsoft PowerApp from Apples iStore and Googles PlayStore. "
-            },
-             {
-                Question: "Do I need internet connection every time to use the App ?",
-                Answer: "Yes. Internet connectivity is required for the App."
+                Question: "Do I need internet connection every time to use the App?",
+                Answer: "Yes, internet connectivity is required for the App."
             }
         );
         UpdateContext({VarAnswerFAQ: false});
