--- a/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/FAQScreen.fx.yaml
@@ -24,7 +24,7 @@ FAQScreen As screen:
             },
              {
                 Question: "Are photos required to enter a lead?",
-                Answer: "No. They are not mandatory. You can attach upto four photos per lead."
+                Answer: "No, pictures are not required, but are often helpful for estimating purposes. You can attach up to four photos per lead."
             },
              {
                 Question: "Can I edit lead information after submitting?",
